more design tweaks and fixed z-index of terminals

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -80,6 +80,7 @@
 
  .user {
     flex: 0 0 auto;
+    padding: 0px 7px;
  }
 
  .this-user {
